syntax = "proto3";

service DataManager {
    rpc ChangeConfig (ServiceConfig) returns (ResponseMsg);
    rpc StopService (ServiceName) returns (ResponseMsg);
};

// The request message containing the user's name.
message ServiceConfig {
    string name = 1;
    string url = 2;
    float frequency = 3;
    float alerting_window = 4;
    float allowed_resp_time = 5;
    string email1 = 6;
    string email2 = 7;
};

message ResponseMsg {
    string result = 1;
};

message ServiceName {
    string name = 1;
}